fix: [IDP-1596]: Update Resource Type Enum in favorites framework to inlcude IDP Specific Resources
